Fix several issues reported by SonarQube after move to Java 25.