@@ -13,7 +13,6 @@ import java.util.Collections;
 import java.util.List;
 
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 import static nl.ulso.markdown_curator.vault.Document.newDocument;
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -27,14 +26,16 @@ class DocumentTest
     void equalsContract()
     {
         EqualsVerifier.forClass(Document.class)
-                .withPrefabValues(Document.class,
-                        newDocument("1", 0, Collections.emptyList()),
-                        newDocument("2", 0, Collections.emptyList()))
-                .withPrefabValues(Section.class,
-                        new Section(1, "1", emptyList()),
-                        new Section(1, "2", emptyList()))
-                .withIgnoredFields("document", "section", "title", "folder", "sortableTitle")
-                .verify();
+            .withPrefabValues(Document.class,
+                newDocument("1", 0, Collections.emptyList()),
+                newDocument("2", 0, Collections.emptyList())
+            )
+            .withPrefabValues(Section.class,
+                new Section(1, "1", emptyList()),
+                new Section(1, "2", emptyList())
+            )
+            .withIgnoredFields("document", "section", "title", "folder", "sortableTitle")
+            .verify();
     }
 
     @Test
@@ -60,7 +61,8 @@ class DocumentTest
     void frontMatterOnlyDocument()
     {
         var document = newDocument("document", 0,
-                List.of("---", "foo: bar", "---"));
+            List.of("---", "foo: bar", "---")
+        );
         softly.assertThat(document.title()).isEqualTo("document");
         softly.assertThat(document.frontMatter().string("foo", null)).isEqualTo("bar");
         softly.assertThat(document.fragments().size()).isEqualTo(1);
@@ -77,24 +79,25 @@ class DocumentTest
     void fullDocument()
     {
         var document = newDocument("document", 0, document("""
-                ---
-                aliases: [alias]
-                date: 1976-11-30
-                priority: 100
-                title: ignored
-                ---
-                # title
-                
-                ## foo bar
-                
-                lorem ipsum
-                
-                
-                """));
+            ---
+            aliases: [alias]
+            date: 1976-11-30
+            priority: 100
+            title: ignored
+            ---
+            # title
+            
+            ## foo bar
+            
+            lorem ipsum
+            
+            
+            """)
+        );
         softly.assertThat(document.title()).isEqualTo("title");
         softly.assertThat(document.frontMatter().integer("priority", -1)).isEqualTo(100);
         softly.assertThat(document.frontMatter().date("date", null).toString())
-                .isEqualTo("1976-11-30");
+            .isEqualTo("1976-11-30");
         var mainSection = (Section) document.fragment(1);
         softly.assertThat(mainSection.title()).isEqualTo("title");
         softly.assertThat(mainSection.level()).isEqualTo(1);
@@ -109,13 +112,14 @@ class DocumentTest
     void multipleSameLevelSections()
     {
         var document = newDocument("document", 0, document("""
-                ## Section 1
-                Introduction
-                ## Section 2
-                ### Subsection 1
-                ### Subsection 2
-                ## Section 3
-                """));
+            ## Section 1
+            Introduction
+            ## Section 2
+            ### Subsection 1
+            ### Subsection 2
+            ## Section 3
+            """)
+        );
         softly.assertThat(document.title()).isEqualTo("document");
         softly.assertThat(document.frontMatter().isEmpty()).isTrue();
         softly.assertThat(document.fragments().size()).isEqualTo(4);
@@ -129,11 +133,11 @@ class DocumentTest
     void unclosedYamlFrontMatter()
     {
         String text = """
-                ---
-                foo: bar
-                
-                # Title
-                """;
+            ---
+            foo: bar
+            
+            # Title
+            """;
         var document = newDocument("document", 0, document(text));
         softly.assertThat(document.title()).isEqualTo("document");
         var textBlock = (TextBlock) document.fragment(1);
@@ -144,10 +148,10 @@ class DocumentTest
     void invalidYamlFrontMatter()
     {
         String text = """
-                ---
-                42
-                ---
-                # Title""";
+            ---
+            42
+            ---
+            # Title""";
         var document = newDocument("document", 0, document(text));
         softly.assertThat(document.frontMatter().isEmpty()).isTrue();
         softly.assertThat(document.title()).isEqualTo("Title");
@@ -160,12 +164,12 @@ class DocumentTest
     void codeBlock()
     {
         String text = """
-                line
-                ```js
-                let foo = 42;
-                ```
-                line
-                """;
+            line
+            ```js
+            let foo = 42;
+            ```
+            line
+            """;
         var document = newDocument("document", 0, document(text));
         softly.assertThat(document.fragments()).hasSize(4);
         softly.assertThat(document.fragment(2)).isInstanceOf(CodeBlock.class);
@@ -178,9 +182,9 @@ class DocumentTest
     void emptyCodeBlock()
     {
         String text = """
-                ```
-                ```
-                """;
+            ```
+            ```
+            """;
         var document = newDocument("document", 0, document(text));
         softly.assertThat(document.fragments()).hasSize(2);
         softly.assertThat(document.fragment(1)).isInstanceOf(CodeBlock.class);
@@ -193,10 +197,10 @@ class DocumentTest
     void query()
     {
         String text = """
-                <!--query-->
-                foo
-                <!--/query (bar)-->
-                """;
+            <!--query-->
+            foo
+            <!--/query (bar)-->
+            """;
         var document = newDocument("document", 0, document(text));
         softly.assertThat(document.fragments()).hasSize(2);
         softly.assertThat(document.fragment(1)).isInstanceOf(QueryBlock.class);
@@ -207,19 +211,19 @@ class DocumentTest
 
     @ParameterizedTest
     @ValueSource(strings = {
+        """
+            ---
+            foo: bar
+            answer: 42
+            """,
+        """
+            <!--query-->
+            foo
+            """,
+        """
+            ```
+            code
             """
-                    ---
-                    foo: bar
-                    answer: 42
-                    """,
-            """
-                    <!--query-->
-                    foo
-                    """,
-            """
-                    ```
-                    code
-                    """
     })
     void unclosedBlockBecomesTextBlock(String text)
     {
@@ -232,12 +236,13 @@ class DocumentTest
     void nestedQueryBlockBecomesTextBlockAndQueryBlock()
     {
         var document = newDocument("document", 0, document("""
-                <!--query-->
-                foo
-                <!--query-->
-                bar
-                <!--/query-->
-                """));
+            <!--query-->
+            foo
+            <!--query-->
+            bar
+            <!--/query-->
+            """)
+        );
         softly.assertThat(document.fragments()).hasSize(3);
         softly.assertThat(document.fragment(1)).isInstanceOf(TextBlock.class);
         softly.assertThat(document.fragment(2)).isInstanceOf(QueryBlock.class);
@@ -247,10 +252,11 @@ class DocumentTest
     void namedQuery()
     {
         var document = newDocument("document", 0, document("""
-                <!--query:name-->
-                foo
-                <!--/query-->
-                """));
+            <!--query:name-->
+            foo
+            <!--/query-->
+            """)
+        );
         softly.assertThat(document.fragments()).hasSize(2);
         softly.assertThat(document.fragment(1)).isInstanceOf(QueryBlock.class);
         var block = (QueryBlock) document.fragment(1);
@@ -266,6 +272,6 @@ class DocumentTest
 
     private List<String> document(String text)
     {
-        return text.lines().collect(toList());
+        return text.lines().toList();
     }
 }
